--- a/app/locale/zh_TW/Mage_Adminhtml.csv
+++ b/app/locale/zh_TW/Mage_Adminhtml.csv
@@ -34,7 +34,7 @@
 "Promotions","促銷活動"
 "Catalog Price Rules","目錄價格規則"
 "Shopping Cart Price Rules","購物車價格規則"
-"CMS","客戶管理系統"
+"CMS","頁面管理系統"
 "Manage Pages","管理頁面"
 "Static Blocks","靜態格"
 "Poll Manager","投票管理員"
@@ -106,7 +106,7 @@
 "Last Modified","最後編輯"
 "Reset Filter","重設過濾器"
 "Please make sure that all global admin search modules are installed and activated.","請確認 global admin 搜尋模組已安裝並開啟。"
-"Global","全球"
+"Global","通用"
 "New Address","新地址"
 "Delete Category","刪除目錄"
 "Tag","標籤"
