--- a/app/locale/zh_TW/Mage_Catalog.csv
+++ b/app/locale/zh_TW/Mage_Catalog.csv
@@ -26,7 +26,7 @@
 "Is Qty Decimal","數量使用十進制"
 "Manufacturer","製造商"
 "Page Layout","頁面佈局"
-"Best Value","最佳價值"
+"Best Value","超值"
 "Name","名字"
 "Invalid Attribute Requested","無效的屬性要求"
 "Meta Description","Meta 描述"
@@ -60,7 +60,7 @@
 "Special Price:","特別價格"
 "Add to Compare","加入比較"
 "Clear All Items","清除所有項目"
-"Availability: In stock. Ships within 24hours.","貨存狀況：庫存。在24小時內寄出。"
+"Availability: In stock. Ships within 24hours.","貨存狀況：在庫。在24小時內寄出。"
 "Next","下一個"
 "Quick Overview","快速總攬"
 "Add to My Wishlist","加入我的收藏中"
@@ -71,13 +71,13 @@
 "Product Attribute Specs","商品屬性規格"
 "Prev","前頁"
 "Choose an Option...","選擇一個選項..."
-"View as","排序"
+"View as","排序使用"
 "This bundle is out of stock.","這束已無存貨。"
 "Shopping Options","購物選項"
 "Compare Products","比較產品"
 "Product Description","產品描述"
 "Remove This Item","移除此項目"
-"Shop by","購物以…"
+"Shop by","購物選項"
 "More Views","更多的意見"
 "There are no products matching the selection.","沒有產品符合選擇項目。"
 "Remove Product","移除產品"
@@ -105,7 +105,7 @@
 "Check items to add to the cart or select all.","選擇您要加入購物車的商品，或全選。"
 "Show","顯示"
 "per page","每頁"
-"Close Window","關閉窗口"
+"Close Window","關閉視窗"
 "Set Ascending Direction","設置排序為遞增"
 "Cross-sell Products","交叉銷售產品"
 "Learn More","了解更多"
