--- a/app/locale/zh_TW/Mage_CatalogSearch.csv
+++ b/app/locale/zh_TW/Mage_CatalogSearch.csv
@@ -1,16 +1,16 @@
-"Catalog Advanced Search","Catalog Advanced Search"
-"All","All"
-"Name","Name"
-"List","List"
-"Price","Price"
-"Search results for: '%s'","Search results for: '%s'"
-"Go to Home Page","Go to Home Page"
-"Results","Results"
-"Home","Home"
-"Search","Search"
-"Search results for '%s'","Search results for '%s'"
-"Search Settings","Search Settings"
-"Your search returns no results.","Your search returns no results."
-"Search entire store here...","Search entire store here..."
-"Required Fields","Required Fields"
-"Search Site","Search Site"
+"Catalog Advanced Search","目錄進階搜尋"
+"All","全部"
+"Name","名稱"
+"List","列表"
+"Price","價格"
+"Search results for: '%s'","搜尋 '%s' 的結果："
+"Go to Home Page","回到首頁"
+"Results","結果"
+"Home","首頁"
+"Search","搜尋 '%s' 的結果："
+"Search results for '%s'","搜尋 '%s' 的結果"
+"Search Settings","搜尋設定"
+"Your search returns no results.","您的搜尋無結果。"
+"Search entire store here...","搜尋整個商店..."
+"Required Fields","必須欄"
+"Search Site","搜索站"
