--- a/trunk/app/locale/zh_TW/Mage_CatalogRule.csv
+++ b/trunk/app/locale/zh_TW/Mage_CatalogRule.csv
@@ -1,16 +1,16 @@
-"To Fixed Value","To Fixed Value"
-"Customer registered: %s","Customer registered: %s"
-"Rule price","Rule price"
-"Customer is new buyer: %s","Customer is new buyer: %s"
-"By Fixed value","By Fixed value"
-"Update the Product","Update the Product"
-"To Percentage","To Percentage"
-"Attribute Set","Attribute Set"
-"Start at: %s","Start at: %s"
-"By Percentage","By Percentage"
-"Expire at: %s","Expire at: %s"
-"Name: %s","Name: %s"
-"Update product's %s %s: %s","Update product's %s %s: %s"
-"Product Attribute","Product Attribute"
-"Conditions Combination","Conditions Combination"
-"Description: %s","Description: %s"
+"To Fixed Value","轉為固定值"
+"Customer registered: %s","註冊客戶： %s"
+"Rule price","規定價格"
+"Customer is new buyer: %s","新購買客戶： %s"
+"By Fixed value","為固定值"
+"Update the Product","更新產品"
+"To Percentage","轉為百分比"
+"Attribute Set","屬性組"
+"Start at: %s","開時於： %s"
+"By Percentage","為百分比"
+"Expire at: %s","結束於： %s"
+"Name: %s","名稱： %s"
+"Update product's %s %s: %s","更新產品的 %s %s: %s"
+"Product Attribute","商品屬性"
+"Conditions Combination","判別組"
+"Description: %s","敘述： %s"
