--- a/trunk/app/locale/zh_TW/Mage_Cms.csv
+++ b/trunk/app/locale/zh_TW/Mage_Cms.csv
@@ -1,2 +1,2 @@
-"Page Identifier","Page Identifier"
+"Page Identifier","頁面判別項"
 "Such a block identifier in selected store","Such a block identifier in selected store"
