--- a/trunk/app/locale/zh_TW/Mage_Core.csv
+++ b/trunk/app/locale/zh_TW/Mage_Core.csv
@@ -1,28 +1,28 @@
 "Invalid block name to set child %s: %s","Invalid block name to set child %s: %s"
 "Model class does not exist: %s","Model class does not exist: %s"
 "Empty field id name","Empty field id name"
-"Invalid websites configuration path: %s","Invalid websites configuration path: %s"
-"Invalid store configuration path: %s","Invalid store configuration path: %s"
-"%s already exist","%s already exist"
-"Exception while deleting the object","Exception while deleting the object"
-"Resource is not set","Resource is not set"
-"Error in file: ""%s"" - %s","Error in file: ""%s"" - %s"
-"Block with name ""%s"" already exists","Block with name ""%s"" already exists"
-"Duplicate Of Template Code","Duplicate Of Template Code"
-"Exception while saving the object: %s","Exception while saving the object: %s"
-"Invalid base dir type specified: %s","Invalid base dir type specified: %s"
-"Cannot Delete Email Template","Cannot Delete Email Template"
-"Can't retrieve request object","Can't retrieve request object"
-"%s already exists","%s already exists"
-"Can\'t retrieve entity config for entity: %s of model: %s","Can\'t retrieve entity config for entity: %s of model: %s"
-"Wrong number of arguments for %s","Wrong number of arguments for %s"
-"Could not load default layout file","Could not load default layout file"
-"Invalid layout update argument, expected Mage_Core_Model_Layout_Element","Invalid layout update argument, expected Mage_Core_Model_Layout_Element"
-"Layout update handle not found: %s","Layout update handle not found: %s"
-"You need init translate area","You need init translate area"
-"Invalid block: %s","Invalid block: %s"
-"Invalid block type: %s","Invalid block type: %s"
-"Invalid messages storage ""%s"" for layout messages initialization","Invalid messages storage ""%s"" for layout messages initialization"
-"Invalid transactional email code","Invalid transactional email code"
-"Empty main table name","Empty main table name"
-"Select Store","Select Store"
+"Invalid websites configuration path: %s","無效的網站設定目錄： %s"
+"Invalid store configuration path: %s","無效的商店設定目錄： %s"
+"%s already exist","%s 已存在"
+"Exception while deleting the object","刪除物件中發生錯誤"
+"Resource is not set","資源尚未設定"
+"Error in file: ""%s"" - %s","檔案資料錯誤： ""%s"" - %s"
+"Block with name ""%s"" already exists","模塊名： ""%s"" 已存在"
+"Duplicate Of Template Code","重複的模板代碼"
+"Exception while saving the object: %s","儲存物件中發生錯誤： %s"
+"Invalid base dir type specified: %s","無效的指定基本目錄種類： %s"
+"Cannot Delete Email Template","無法刪除電子郵件模板"
+"Can't retrieve request object","無法獲取要求的物件"
+"%s already exists","%s 已存在"
+"Can\'t retrieve entity config for entity: %s of model: %s","無法獲取實體 %s 設定模組： %s"
+"Wrong number of arguments for %s","錯誤的參數數目 %s"
+"Could not load default layout file","無法讀取預設的排版"
+"Invalid layout update argument, expected Mage_Core_Model_Layout_Element","無效的排版更新參數，應為 Mage_Core_Model_Layout_Element"
+"Layout update handle not found: %s","排版無法找到更新控制碼： %s"
+"You need init translate area","您需要啟始翻譯區"
+"Invalid block: %s","無效的模塊： %s"
+"Invalid block type: %s","無效的模塊類型： %s"
+"Invalid messages storage ""%s"" for layout messages initialization","無效的信息儲存 ""%s"" 排版信息初始化"
+"Invalid transactional email code","無效的交易電子郵件代碼"
+"Empty main table name","空的主表名稱"
+"Select Store","選擇商店"
