--- a/trunk/app/locale/zh_TW/Mage_Datafeed.csv
+++ b/trunk/app/locale/zh_TW/Mage_Datafeed.csv
@@ -1,2 +1,2 @@
-"Description of this channel","Description of this channel"
-"Avaliable Products Categories","Avaliable Products Categories"
+"Description of this channel","此頻道的敘述"
+"Avaliable Products Categories","可用的產品目錄"
