--- a/trunk/app/locale/zh_TW/Mage_Directory.csv
+++ b/trunk/app/locale/zh_TW/Mage_Directory.csv
@@ -1,8 +1,8 @@
-Invalid country code: %s,Invalid country code: %s
-State/Province,State/Province
-"Undefined rate from ""%s-%s""","Undefined rate from ""%s-%s"""
-Cannot retrieve rate from %s,Cannot retrieve rate from %s
-Currency,Currency
-Your current currency is: %s,Your current currency is: %s
-Continue &raquo;,Continue &raquo;
-Select Your Currency,Select Your Currency
+"Invalid country code: %s","無效的國家代碼： %s"
+"State/Province","州/省"
+"Undefined rate from ""%s-%s""","無定義的匯率從 ""%s-%s"""
+"Cannot retrieve rate from %s","無法取得匯率 %s"
+"Currency","幣值"
+"Your current currency is: %s","您目前的幣值為： %s"
+"Continue &raquo;","繼續 &raquo;"
+"Select Your Currency","選擇您的幣值"
