--- a/trunk/app/locale/zh_TW/Mage_Install.csv
+++ b/trunk/app/locale/zh_TW/Mage_Install.csv
@@ -1,69 +1,69 @@
-Time Zone,Time Zone
-Default Currency,Default Currency
-"One from PHP Extensions ""%s"" must be loaded","One from PHP Extensions ""%s"" must be loaded"
-Database connection error,Database connection error
-"PHP Extension ""%s"" must be loaded","PHP Extension ""%s"" must be loaded"
-"Url ""%s"" is invalid","Url ""%s"" is invalid"
-Locale,Locale
-"Url ""%s"" is not accessible","Url ""%s"" is not accessible"
-This Url is invalid,This Url is invalid
-"Path ""%s"" must be writable","Path ""%s"" must be writable"
-PHP Extension '%s' loaded,PHP Extension '%s' loaded
-Database Name,Database Name
-Installation Guide,Installation Guide
-Confirm Password,Confirm Password
-Secure host name,Secure host name
-Password Confirmation,Password Confirmation
-Go to Frontend,Go to Frontend
-Secure Protocol,Secure Protocol
-"For HTTPS connections, default port is 443.","For HTTPS connections, default port is 443."
-I agree to the above terms and conditions,I agree to the above terms and conditions
-First Name,First Name
+"Time Zone","時區"
+"Default Currency","預設幣種"
+"One from PHP Extensions ""%s"" must be loaded","PHP 擴充套件 ""%s""  必須加載"
+"Database connection error","資料庫連接錯誤"
+"PHP Extension ""%s"" must be loaded","PHP 擴充套件 ""%s""  必須加載"
+"Url ""%s"" is invalid","Url ""%s"" 無效"
+"Locale","本地化"
+"Url ""%s"" is not accessible","Url ""%s"" 無法存取"
+"This Url is invalid","此 Url 無效"
+"Path ""%s"" must be writable","目錄 ""%s"" 權限必須為可寫"
+"PHP Extension '%s' loaded","PHP 擴充套件 ""%s""  已加載"
+"Database Name","資料庫名稱"
+"Installation Guide","安裝導覽"
+"Confirm Password","確認密碼"
+"Secure host name","安全主機名稱"
+"Password Confirmation","密碼確認"
+"Go to Frontend","移至前台"
+"Secure Protocol","安全協定"
+"For HTTPS connections, default port is 443.","HTTPS 安全連接, 預設端口為 443。"
+"I agree to the above terms and conditions","我同意上述條款"
+"First Name","名"
 "Before you continue to your store, please make a note of your encryption key (Magento uses it to encrypt passwords, credit cards and more).","Before you continue to your store, please make a note of your encryption key (Magento uses it to encrypt passwords, credit cards and more)."
-Database Connection,Database Connection
-Secure Connection,Secure Connection
-Create Admin Account,Create Admin Account
-Email,Email
-Host name,Host name
-Go to Backend,Go to Backend
-Base Path,Base Path
-Login Information,Login Information
-Password,Password
-Localization,Localization
-Secure www base path,Secure www base path
-User Name,User Name
-Skip URL validation,Skip URL validation
-User Password,User Password
-Host,Host
-Welcome to Magento's Installation Wizard,Welcome to Magento's Installation Wizard
-WWW base path,WWW base path
+"Database Connection","Database Connection"
+"Secure Connection","Secure Connection"
+"Create Admin Account","Create Admin Account"
+"Email","Email"
+"Host name","Host name"
+"Go to Backend","Go to Backend"
+"Base Path","Base Path"
+"Login Information","Login Information"
+"Password","Password"
+"Localization","Localization"
+"Secure www base path","Secure www base path"
+"User Name","User Name"
+"Skip URL validation","Skip URL validation"
+"User Password","User Password"
+"Host","Host"
+"Welcome to Magento's Installation Wizard","Welcome to Magento's Installation Wizard"
+"WWW base path","WWW base path"
 "For HTTP connections, the default port is 80.","For HTTP connections, the default port is 80."
-Secure Port,Secure Port
-Required Fields,Required Fields
-Configuration,Configuration
-You're All Set,You're All Set
-Having trouble installing Magento?,Having trouble installing Magento?
-Username,Username
-Installation,Installation
-Email Address,Email Address
-(Make sure you keep it in a safe place.),(Make sure you keep it in a safe place.)
-Connection,Connection
-Continue,Continue
-Locale settings,Locale settings
-Secure Base Path,Secure Base Path
-Configuration options,Configuration options
-Database user name,Database user name
-Check out our,Check out our
-Protocol,Protocol
+"Secure Port","Secure Port"
+"Required Fields","Required Fields"
+"Configuration","Configuration"
+"You're All Set","You're All Set"
+"Having trouble installing Magento?","Having trouble installing Magento?"
+"Username","Username"
+"Installation","Installation"
+"Email Address","Email Address"
+"(Make sure you keep it in a safe place.)","(Make sure you keep it in a safe place.)"
+"Connection","Connection"
+"Continue","Continue"
+"Locale settings","Locale settings"
+"Secure Base Path","Secure Base Path"
+"Configuration options","Configuration options"
+"Database user name","Database user name"
+"Check out our","Check out our"
+"Protocol","Protocol"
 "Magento uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encription key for you and will display it on the next page.","Magento uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encription key for you and will display it on the next page."
-Database host,Database host
-Last Name,Last Name
-Secure Host,Secure Host
-Default store,Default store
-Get ready to experience Open-Source eCommerce Evolved.,Get ready to experience Open-Source eCommerce Evolved.
-Please set all required settings before clicking Continue,Please set all required settings before clicking Continue
+"Database host","Database host"
+"Last Name","Last Name"
+"Secure Host","Secure Host"
+"Default store","Default store"
+"Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
+"Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
 "Check this box only if you are unable to automatically validate Magento URL, for example if HTTP authentication is required.","Check this box only if you are unable to automatically validate Magento URL, for example if HTTP authentication is required."
-Database user password,Database user password
-Encryption Key,Encryption Key
-Port,Port
-Personal Information,Personal Information
+"Database user password","Database user password"
+"Encryption Key","Encryption Key"
+"Port","Port"
+"Personal Information","Personal Information"
