--- a/app/locale/zh_TW/Mage_Eav.csv
+++ b/app/locale/zh_TW/Mage_Eav.csv
@@ -1,32 +1,32 @@
-"Invalid attribute type","Invalid attribute type"
-"No","No"
-"Wrong entity ID","Wrong entity ID"
-"Unknown parameter","Unknown parameter"
-"Frontend label is not defined","Frontend label is not defined"
-"Invalid data object key","Invalid data object key"
-"Default option value is not defined","Default option value is not defined"
-"Data integrity: No header row found for attribute","Data integrity: No header row found for attribute"
-"Invalid condition","Invalid condition"
-"Valid store_id is expected!","Valid store_id is expected!"
-"Invalid entity supplied","Invalid entity supplied"
-"Wrong attribute group ID","Wrong attribute group ID"
-"Wrong attribute set ID","Wrong attribute set ID"
-"Invalid store id supplied","Invalid store id supplied"
-"Invalid alias, already exists in joined attributes","Invalid alias, already exists in joined attributes"
-"Value of attribute ""%s"" must be unique","Value of attribute ""%s"" must be unique"
-"Invalid foreign key","Invalid foreign key"
-"Invalid character encountered in increment ID: %s","Invalid character encountered in increment ID: %s"
-"Invalid entity type","Invalid entity type"
-"Attribute with the same code","Attribute with the same code"
-"Attempt to add an invalid object","Attempt to add an invalid object"
-"Invalid attribute requested: %s","Invalid attribute requested: %s"
-"Invalid object supplied","Invalid object supplied"
-"Joined field with this alias is already declared","Joined field with this alias is already declared"
-"Entity's object is not initialized","Entity's object is not initialized"
-"Wrong attribute ID","Wrong attribute ID"
-"Invalid attribute name: %s","Invalid attribute name: %s"
-"No connection available","No connection available"
-"Yes","Yes"
-"Entity is not initialized","Entity is not initialized"
-"Invalid entity type %s","Invalid entity type %s"
-"No options root node found","No options root node found"
+"Invalid attribute type","無效的屬性種類"
+"No","否"
+"Wrong entity ID","錯誤實體 ID"
+"Unknown parameter","未知的參數"
+"Frontend label is not defined","前台標籤未定義"
+"Invalid data object key","無效的資料物件鍵值"
+"Default option value is not defined","預設的選項值未定義"
+"Data integrity: No header row found for attribute","資料一致性： 找不到此屬性的檔頭行"
+"Invalid condition","無效的判別式"
+"Valid store_id is expected!","應輸入有效的商店 ID!"
+"Invalid entity supplied","提供的實體無效"
+"Wrong attribute group ID","錯誤的屬性群組 ID"
+"Wrong attribute set ID","錯誤的屬性組 ID"
+"Invalid store id supplied","提供的商店 ID 錯誤"
+"Invalid alias, already exists in joined attributes","無效的別名，已在結合屬性中存在"
+"Value of attribute ""%s"" must be unique","屬性值 ""%s"" 必須獨一無二"
+"Invalid foreign key","錯誤的 Foreign Key"
+"Invalid character encountered in increment ID: %s","在遞增 ID 中遇到無效字元 %s"
+"Invalid entity type","無效的實體種類"
+"Attribute with the same code","屬性擁有同樣代碼"
+"Attempt to add an invalid object","嘗試加入無效物件"
+"Invalid attribute requested: %s","無效的屬性要求： %s"
+"Invalid object supplied","提供的物件無效"
+"Joined field with this alias is already declared","結合欄中已有此定義別名"
+"Entity's object is not initialized","實體物件尚未初始化"
+"Wrong attribute ID","錯誤的屬性 ID"
+"Invalid attribute name: %s","無效的屬性名稱： %s"
+"No connection available","無可使用的連接"
+"Yes","是"
+"Entity is not initialized","實體尚未初始化"
+"Invalid entity type %s","無效的實體種類 %s"
+"No options root node found","找不到選項的根節點"
